# datatrust-mcp

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
scripts/: build_wheelhouse.sh  smoke_test.py  verify_tool_catalog.py
src/datatrust_mcp/: cli.py  config.py  oauth.py  server.py
