[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datatrust-mcp"
version = "0.2.0"
description = "stdio MCP server for DataTrust / RightSight — authenticates via .NET gateway"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "RightData AI Team", email = "ai-team@rightdata.com" }]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rightdataorg/datatrust-mcp"
Repository = "https://github.com/rightdataorg/datatrust-mcp"
Issues = "https://github.com/rightdataorg/datatrust-mcp/issues"

[project.scripts]
datatrust-mcp = "datatrust_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datatrust_mcp"]
